# remk_python

./: .gitignore  .python-version  config.py  config.yaml  database.py  database_schema.sql  http_server.go  init_data.sql  init_database.py  loguru_logging.py  main.py  main.spec  pyproject.toml  requirements.txt
ai/: __init__.py  ai_detect_img.py  ai_process.py  b_channel_regression_model.pkl  best.onnx  best_640_ir10.onnx  compute_b_channel.cp310-win_amd64.pyd  fft.cp310-win_amd64.pyd  findTransformECC.cp310-win_amd64.pyd  image_stitch_blend.cp310-win_amd64.pyd  model.onnx  optic_disc_detection.cp310-win_amd64.pyd  retinex.cp310-win_amd64.pyd  rgb_image_generate.cp310-win_amd64.pyd  rgb_image_generate_bk.pyd
frontend/: .gitignore.example  CONFIG.md  ELECTRON.md  ELECTRON_INTEGRATION.md  INSTALL.md  LOGIN_REDIRECT_UPDATE.md  MIGRATION.md  PATIENT_API_QUICKREF.md  QUICKSTART.md  README.md  SECURITY_CHECK.md  SECURITY_FIX.md  components.d.ts  index.html  package-lock.json  package.json  package.json.md5  vite.config.js
interface/: __init__.py  ai_diagnosis.py  auth.py  config_management.py  diagnosis_record.py  examination.py  fundus_image.py  fundus_image_save.py  patient.py  permission.py  registration.py  role.py  role_permission.py  system_log.py  user.py  user_role.py
models/: __init__.py  ai_diagnosis.py  base.py  diagnosis_record.py  examination.py  examination_type.py  follow_up.py  fundus_image.py  patient.py  permission.py  registration.py  role.py  role_permission.py  system_log.py  user.py  user_role.py
tools/: hash_password.py
utils/: imags.py  (+3 more)
(+53 files in other folders)
